--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly Challenge</title>
+    <title>{{ month_name }} Challenge</title>
 </head>
 <body>
-    <h1>This Month's Challenge</h1>
-    <h2>Code daily.</h2>
+    <h1>{{ month_name }}'s Challenge</h1>
+    <h2>{{ text }}</h2>
 </body>
 </html>
