--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -7,7 +7,7 @@
     <title>{{ month_name }} Challenge</title>
 </head>
 <body>
-    <h1>{{ month_name }}'s Challenge</h1>
+    <h1>{{ month_name | title }}'s Challenge</h1>
     <h2>{{ text }}</h2>
 </body>
 </html>
