--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>{{ month_name | title }}'s Challenge</h1>
+    {% if text is not None %}
     <h2>{{ text }}</h2>
+    {% else %}
+    <p>No challenge for this month.</p>
+    {% endif %}
 </body>
 </html>
