--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Challenges</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+
+{% block page_title %}All Challenges{% endblock %}
+
+{% block content %}
     <ul>
         {% for i in months %}
         <li><a href="{% url "month-challenge" i %}">{{i|title}}</a></li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
