--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ month_name }} Challenge</title>
-</head>
-<body>
-    <h1>{{ month_name | title }}'s Challenge</h1>
-    {% if text is not None %}
-    <h2>{{ text }}</h2>
-    {% else %}
-    <p>No challenge for this month.</p>
-    {% endif %}
-</body>
-</html>
+{% extends "base.html" %}
+
+
+{% block page_title %}{{ month_name }} Challenge{% endblock %}
+
+{% block content %}
+    <div>
+        <h1>{{ month_name | title }}'s Challenge</h1>
+        {% if text is not None %}
+        <h2>{{ text }}</h2>
+        {% else %}
+        <p>No challenge for this month.</p>
+        {% endif %}
+    </div>
+{% endblock %}
+
