--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
 
+{% block css_files %}
+<link rel ="stylesheet" href="{% static "challenges/challenge.css" %}">
+<link rel ="stylesheet" href="{% static "challenges/includes/header.css" %}">
+{% endblock %}
 
 {% block page_title %}{{ month_name }} Challenge{% endblock %}
 
@@ -12,7 +17,7 @@
         {% if text is not None %}
         <h2>{{ text }}</h2>
         {% else %}
-        <p>No challenge for this month.</p>
+        <p class="fallback" >No challenge for this month.</p>
         {% endif %}
     </div>
 {% endblock %}
